--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "lucide-react": "^0.341.0",
     "mongoose": "^8.3.4",
     "next": "14.1.0",
+    "query-string": "^9.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "stripe": "^14.25.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "update": "^0.7.4",
